# checker_logs

./: README.md
bot/: .jshintrc  config.json  index.js  package-lock.json  package.json  test.js
server/: Cargo.toml
server/logs/: shadowcraft_magic1710.txt
server/src/: main.rs  updater.rs
