[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/updater.rs"
name = "updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = "0.11.10"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
#tokio = { version = "1", features = ["fs", "io-std", "macros"] }
